Limit app install methods #11738