@@ -1,11 +1,11 @@
 package com.enonic.xp.impl.server.rest;
 
-import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HexFormat;
 import java.util.Optional;
-import java.util.Set;
 
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
 import org.slf4j.Logger;
@@ -23,6 +23,7 @@ import jakarta.ws.rs.core.MediaType;
 import com.enonic.xp.app.Application;
 import com.enonic.xp.app.ApplicationKey;
 import com.enonic.xp.app.ApplicationService;
+import com.enonic.xp.event.EventPublisher;
 import com.enonic.xp.impl.server.rest.model.ApplicationInstallParams;
 import com.enonic.xp.impl.server.rest.model.ApplicationInstallResultJson;
 import com.enonic.xp.impl.server.rest.model.ApplicationInstalledJson;
@@ -39,11 +40,20 @@ import com.enonic.xp.web.multipart.MultipartItem;
 public final class ApplicationResource
     implements JaxRsComponent
 {
-    private static final Set<String> ALLOWED_PROTOCOLS = Set.of( "http", "https" );
-
     private static final Logger LOG = LoggerFactory.getLogger( ApplicationResource.class );
 
-    private ApplicationService applicationService;
+    private final ApplicationService applicationService;
+
+    private final EventPublisher eventPublisher;
+
+    ApplicationLoader applicationLoader = new ApplicationLoader();
+
+    @Activate
+    public ApplicationResource( final @Reference ApplicationService applicationService, final @Reference EventPublisher eventPublisher )
+    {
+        this.applicationService = applicationService;
+        this.eventPublisher = eventPublisher;
+    }
 
     @POST
     @Path("install")
@@ -73,24 +83,18 @@ public final class ApplicationResource
         String failure;
         try
         {
-            final URL url = new URL( urlString );
+            final URL url = URI.create( urlString ).toURL();
 
-            if ( ALLOWED_PROTOCOLS.contains( url.getProtocol() ) )
-            {
-                return installApplication( url, sha512 );
-            }
-            else
-            {
-                failure = "Illegal protocol: " + url.getProtocol();
-                result.setFailure( failure );
+            final ByteSource source = applicationLoader.load( url, sha512, eventPublisher::publish );
+            final Application application = this.applicationService.installGlobalApplication( source );
 
-                return result;
-            }
-
+            result.setApplicationInstalledJson( new ApplicationInstalledJson( application, false ) );
+            return result;
         }
-        catch ( IOException e )
+        catch ( Exception e )
         {
-            LOG.error( failure = "Failed to upload application from " + urlString, e );
+            failure = "Failed to upload application from " + params.getUrl();
+            LOG.error( failure, e );
             result.setFailure( failure );
             return result;
         }
@@ -101,7 +105,7 @@ public final class ApplicationResource
     @Consumes(MediaType.APPLICATION_JSON)
     public void uninstall( final ApplicationParams params )
     {
-        this.applicationService.uninstallApplication( ApplicationKey.from( params.getKey() ), true );
+        this.applicationService.uninstallApplication( ApplicationKey.from( params.getKey() ) );
     }
 
     @POST
@@ -109,7 +113,7 @@ public final class ApplicationResource
     @Consumes(MediaType.APPLICATION_JSON)
     public void start( final ApplicationParams params )
     {
-        this.applicationService.startApplication( ApplicationKey.from( params.getKey() ), true );
+        this.applicationService.startApplication( ApplicationKey.from( params.getKey() ) );
     }
 
     @POST
@@ -117,27 +121,7 @@ public final class ApplicationResource
     @Consumes(MediaType.APPLICATION_JSON)
     public void stop( final ApplicationParams params )
     {
-        this.applicationService.stopApplication( ApplicationKey.from( params.getKey() ), true );
-    }
-
-    private ApplicationInstallResultJson installApplication( final URL url, byte[] sha512 )
-    {
-        final ApplicationInstallResultJson result = new ApplicationInstallResultJson();
-
-        try
-        {
-            final Application application = this.applicationService.installGlobalApplication( url, sha512 );
-
-            result.setApplicationInstalledJson( new ApplicationInstalledJson( application, false ) );
-        }
-        catch ( Exception e )
-        {
-            final String failure = "Failed to process application from " + url;
-            LOG.error( failure, e );
-
-            result.setFailure( failure );
-        }
-        return result;
+        this.applicationService.stopApplication( ApplicationKey.from( params.getKey() ) );
     }
 
     private ApplicationInstallResultJson installApplication( final ByteSource byteSource, final String applicationName )
@@ -146,7 +130,7 @@ public final class ApplicationResource
 
         try
         {
-            final Application application = this.applicationService.installGlobalApplication( byteSource, applicationName );
+            final Application application = this.applicationService.installGlobalApplication( byteSource );
 
             result.setApplicationInstalledJson( new ApplicationInstalledJson( application, false ) );
         }
@@ -158,12 +142,5 @@ public final class ApplicationResource
             result.setFailure( failure );
         }
         return result;
-    }
-
-    @SuppressWarnings("UnusedDeclaration")
-    @Reference
-    public void setApplicationService( final ApplicationService applicationService )
-    {
-        this.applicationService = applicationService;
     }
 }
